c4prj1_deck/grade.txt
Grading at Wed Jul 29 15:09:57 UTC 2020
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:268:3: error: unknown type name ‘unisgned’
   unisgned* arr_count=calloc(hand->n_cards,sizeof(int));
   ^
eval.c:285:10: error: pointer targets in return differ in signedness [-Werror=pointer-sign]
   return arr_count;
          ^
cc1: all warnings being treated as errors
Compilation of eval.c failed

Overall Grade: F
